--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         <link rel="stylesheet" type="text/css" href="css/device.css" />
     </head>
     <body>
-        <div class="device">
             <iframe class="iframe" src="app.html"></iframe>
-        </div>
+        <!--div class="device">
+        </div-->
     </body>
 </html>
