--- a/index.html
+++ b/index.html
@@ -6,11 +6,28 @@
         <meta name="mobile-web-app-capable" content="yes" />
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-        <link rel="stylesheet" type="text/css" href="css/device.css" />
+
+        <!-- shims for backwards compatibility -->
+        <script type="text/javascript" src="lib/functionPrototypeBind.js"></script>
+        <script type="text/javascript" src="lib/classList.js"></script>
+        <script type="text/javascript" src="lib/requestAnimationFrame.js"></script>
+
+        <!-- module loader -->
+        <script type="text/javascript" src="lib/requirejs/require.js"></script>
+
+        <!-- famous -->
+        <link rel="stylesheet" type="text/css" href="lib/famous/core/famous.css" />
+        <script type="text/javascript" src="lib/famous/famous.min.js"></script>
+
+        <!-- app code -->
+        <link rel="stylesheet" type="text/css" href="css/app.css" />
+        <link rel="stylesheet" type="text/css" href="css/styles.css" />
+        <script type="text/javascript">
+            require.config({
+                baseUrl: './src/'
+            });
+            require(['main']);
+        </script>
     </head>
-    <body>
-            <iframe class="iframe" src="app.html"></iframe>
-        <!--div class="device">
-        </div-->
-    </body>
+    <body></body>
 </html>
